# ossmate

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md
.claude/: CLAUDE.md  keybindings.json.example  settings.json  settings.local.json.example  statusline.cmd  statusline.sh
.claude-plugin/: hooks.json  marketplace.json  mcp.json  plugin.json
.claude/agents/: community-greeter.md  dep-auditor.md  issue-classifier.md  pr-triager.md  release-notes-writer.md  security-reviewer.md
.claude/commands/: audit-deps.md  changelog-bump.md  onboard-contributor.md  release-notes.md  security-review-pr.md  stale-sweep.md  triage-issue.md  triage-pr.md
.claude/hooks/: _lib.py  post_tool_use_audit.py  pre_tool_use_guard.py  session_start_brief.py  stop_summary.py  user_prompt_router.py
.claude/output-styles/: changelog.md  maintainer.md
.github/workflows/: ci.yml  release.yml
cli/ossmate/: README.md  pyproject.toml
cli/ossmate/src/ossmate/: __init__.py  __main__.py  agent.py  cli.py  diagnostics.py  prompts.py
cli/ossmate/src/ossmate/tools/: repo.py
docs/: portfolio.en.md  portfolio.md  project_phases.md
mcp/ossmate_mcp/: README.md  pyproject.toml
mcp/ossmate_mcp/src/ossmate_mcp/: __init__.py  __main__.py  server.py
mcp/ossmate_mcp/src/ossmate_mcp/resources/: __init__.py  templates.py
mcp/ossmate_mcp/src/ossmate_mcp/tools/: __init__.py  changelog.py  deps.py  github.py  repo.py
scheduled/: README.md  daily_digest.md  release_radar.md  stale_sweep_weekly.md
scripts/: bump_version.py  dev_link.ps1  dev_link.sh
tests/: conftest.py  test_agents_skills.py  test_cli.py  test_doctor.py  test_hooks.py  test_mcp_tools.py  test_plugin_manifest.py  test_scheduled.py  test_versioning.py  test_workflows.py
