[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ossmate"
version = "0.0.1"
description = "Claude-powered co-maintainer for open source projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sunjin12", email = "sunjin12333@gmail.com" }]
keywords = ["claude", "anthropic", "oss", "github", "maintainer", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "PyGithub>=2.4.0",
    "ossmate-mcp>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
ossmate = "ossmate.__main__:main"

[project.urls]
Homepage = "https://github.com/sunjin12/ossmate"
Repository = "https://github.com/sunjin12/ossmate"
Issues = "https://github.com/sunjin12/ossmate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ossmate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
