[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ossmate-mcp"
version = "0.1.0"
description = "MCP server exposing OSS-maintainer tools (GitHub, changelog, deps, repo) to Claude"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sunjin12", email = "sunjin12333@gmail.com" }]
keywords = ["mcp", "claude", "oss", "github", "maintainer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "PyGithub>=2.4.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
ossmate-mcp = "ossmate_mcp.server:main"

[project.urls]
Homepage = "https://github.com/sunjin12/ossmate"
Repository = "https://github.com/sunjin12/ossmate"
Issues = "https://github.com/sunjin12/ossmate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ossmate_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
